record latest running version of target search

--- a/target_search/search.html
+++ b/target_search/search.html
@@ -94,7 +94,10 @@ additional information.</A> </P>
 	 <OPTION value="20">AO20</OPTION>
 	 <OPTION value="21">AO21</OPTION>
 	 <OPTION value="22">AO22</OPTION>
-	 <OPTION value="23">AO23</OPTION>	
+         <OPTION value="23">AO23</OPTION>
+         <OPTION value="24">AO24</OPTION>
+         <OPTION value="25">AO25</OPTION>
+         <OPTION value="26">AO26</OPTION>
     </SELECT></TD>
 <TD colspan="1">
      <A HREF="./search_help.html#PROP_CYCLE">
@@ -124,7 +127,9 @@ additional information.</A> </P>
 	 <OPTION value="20">AO20</OPTION>
 	 <OPTION value="21">AO21</OPTION>
 	 <OPTION value="22">AO22</OPTION>
-	 <OPTION value="23">AO23</OPTION>
+         <OPTION value="23">AO23</OPTION>
+         <OPTION value="24">AO24</OPTION>
+         <OPTION value="25">AO25</OPTION>
     </SELECT></TD></TR>
 <TR><TD colspan="6">
      <A HREF="./search_help.html#COORDINATES">Coordinate Search</A>: <A HREF="./search_help.html#RA">RA</A>: <INPUT TYPE="text" NAME="ra" MAXLENGTH="15"
@@ -211,7 +216,7 @@ Last modified:
 <!--#CONFIG TIMEFMT="%x"-->
 <!--#flastmod file="$DOCUMENT_NAME"-->
 <br>
-Page maintained by <a href="mailto:william.aaron@cfa.harvard.edu">William Aaron</A>
+Page maintained by <a href="mailto:lpulgarinduque@cfa.harvard.edu">Lina Pulgarin-Duque</A>
 </P>
 </BODY>
 </HTML>
